testsuite/tests/polykinds/T15577.stderr

T15577.hs:20:18: error:
    • Expecting one more argument to ‘f’
      Expected a type, but ‘f’ has kind ‘* -> *’
    • In the type ‘f’
      In a stmt of a pattern guard for
                     an equation for ‘g’:
        Refl <- f @f @a @r r
      In an equation for ‘g’: g r | Refl <- f @f @a @r r = Refl
